# news-pipeline

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: classify_articles.yaml  classify_stories.yaml  clean.yaml  cluster.yaml  cluster_articles.yaml  compute_embeddings.yaml  embed.yaml  enrich_entities.yaml  extract.yaml  extract_entities.yaml  generate_stories.yaml  ingest.yaml  ingest_articles.yaml  link_stories.yaml  load.yaml  normalize.yaml  purge.yaml  reset.yaml  resolve_article_locations.yaml  resolve_entities.yaml  run.yaml  run_pipeline.yaml
collected_readmes/: README_news-cluster.md  README_news-normalize.md  README_news-pipeline.md
common/: __init__.py  config.py
config/: backfill.yaml  default.yaml
depricated/services/news-cluster/: README.md  cluster.py
depricated/services/news-ingest/: Dockerfile
depricated/services/news-normalize/: README.md
news-api/configs/: prod.yaml  test.yaml
news-api/news_api/: config.py  main.py
news-api/news_api/io/: s3.py
news-api/news_api/models/: article.py  raw_article.py  story.py
news-api/news_api/routers/: articles.py  health.py  raw_articles.py
news-api/news_api/services/: raw_article_service.py
news-cluster/: README.md  cluster.py
news-cluster/configs/: prod.yaml  test.yaml
news-cluster/news_cluster/: __init__.py  config_loader.py  pipeline.py  schema.py
news-cluster/news_cluster/cluster/: hdbscan.py  stories.py
news-cluster/news_cluster/io/: __init__.py  read_parquet.py
news-cluster/tests/: __init__.py
news-ingest/: Dockerfile  README.md  ingest.py
news-ingest/configs/: test.yaml
news-ingest/news_ingest/: __init__.py
news-ingest/news_ingest/resolve/: __init__.py
news-ingest/news_ingest/sources/: ap.py  cnn.py  fox.py  ft.py  guardian.py  npr.py  nyt.py  politico.py  reuters.py  rss.py  wapo.py
news-ingest/news_ingest/storage/: s3.py
news-ingest/tests/: test_ingest_local.py
news-ingest/tests/output/: npr_20260101_085409.jsonl  yahoo_20260101_085409.jsonl
news-normalize/: README.md  normalize.py
news-normalize/.plans/: initial_plan.md  s3-period-fetch.md  spacy-model-config.md  yaml-config.md
news-normalize/configs/: prod.yaml  test.yaml
news-normalize/news_normalize/: __init__.py  cli.py  config.py  config_loader.py  normalize.py
news-normalize/news_normalize/extract/: city_mapper.py  country_normalizer.py  locations.py  ner.py  region_mapper.py  schema.py  text.py
news-normalize/news_normalize/geo/: resolver.py
news-normalize/news_normalize/io/: read_jsonl.py  s3.py  write_output.py  write_parquet.py
news-normalize/news_normalize/nlp/: ner.py
news-normalize/tests/: test_normalize_local.py
news-normalize/tests/data/: fox_20260101_085409.jsonl  guardian_20260101_085409.jsonl  sky_20260101_085409.jsonl
news-normalize/tests/output/: normalized_20260101_103548.json
scripts/: clear_clusters.py  clear_db.py  clear_embeddings.py  clear_stories.py  collate_readmes.py  db_testing.py  print_article_embeddings.py  print_formatted_clusers.py  print_schemas.py  print_stories.py  print_table.py  print_table_rows.py  run_news_api.py
service_tests/: test_cluster.py  test_normalize.py
service_tests/data/: raw_articles_2026_01_05_09_20.jsonl
services/news-api/: README.md
services/news-api/configs/: test.yaml
services/news-api/news_api/: config.py
services/news-cluster/configs/: prod.yaml
services/news-cluster/news_cluster/: schema.py
services/news-ingest/: Dockerfile  README.md
services/news-ingest/news_ingest/: config.py
services/news-ingest/tests/: test_ingest_local.py
services/news-normalize/configs/: prod.yaml  service_test.yaml
src/classify_articles/: __init__.py  __main__.py  classify_articles.py  cli.py  helpers.py  models.py
src/classify_stories/: __init__.py  __main__.py  classify_stories.py  cli.py
src/cluster_articles/: __init__.py  __main__.py  cli.py  cluster_articles.py  helpers.py  models.py
src/common/: aws.py  cli_helpers.py  datetime.py  hashing.py  local_io.py  utils.py
src/compute_embeddings/: __init__.py  __main__.py  cli.py  compute_embeddings.py  helpers.py  models.py
src/enrich_entities/: __init__.py  __main__.py  cli.py  enrich_entities.py  helpers.py  models.py  wikidata.py
src/extract_entities/: __init__.py  __main__.py  cli.py  extract_entities.py  helpers.py  models.py
src/generate_stories/: __main__.py  classify_stories.py  cli.py  generate_stories.py  get_similar_stories.py  helpers.py  instructions.py  link_stories.py  resolve_story_entities.py  resolve_story_location.py  topic_indicators.py
src/ingest_articles/: __init__.py  __main__.py  cli.py  helpers.py  ingest_articles.py  models.py
src/ingest_articles/clean_articles/: __init__.py  clean.py
src/ingest_articles/fetch_articles/: __init__.py  fetch_article_text.py  fetch_articles.py  fetch_rss_articles.py  sources.py
src/link_stories/: __init__.py  __main__.py  cli.py  get_similar_stories.py  helpers.py  link.py
src/news_pipeline/clean/: clean.py  models.py  run.py
src/news_pipeline/embed/: embed.py  run.py
src/news_pipeline/ingest/: fetch_article_text.py  fetch_rss_articles.py  ingest.py  models.py  run.py
src/news_pipeline/normalize/: clean_text.py  compute_embedding.py  extract_entities.py  get_locations.py  (+3 more)
src/purge/: __main__.py  cli.py  purge.py
src/resolve_article_locations/: __init__.py  __main__.py  cli.py  models.py  resolve_article_locations.py
src/resolve_entities/: __init__.py  __main__.py  cli.py  helpers.py  models.py  resolve_entities.py
src/story_engine/: cluster.py  get_articles.py  run.py
tests/: test_normalize.py
tests/integration/: conftest.py
tests/test_clean/: __init__.py  test_clean.py
tests/test_generate_stories/: __init__.py  test_generate_stories.py  test_generate_stories_cronkite.py  test_resolve_story_persons.py
tests/test_ingest/: test_fetch_article_text.py  test_fetch_rss_articles.py  test_ingest.py
tests/test_resolve_article_locations/: test_resolve_article_locations.py
tests/test_resolve_entities/: test_resolve_entities.py
(+93 files in other folders)
