[tool.poetry]
packages = [{include = "common", from = "src"}]

[project]
name = "news-pipeline"
version = "0.1.0"
description = "Modular news processing pipeline"
authors = [
    {name = "Euan", email = "euan.m.campbell@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    # Shared dependencies
    "boto3>=1.42,<2.0",
    "context-data-schema @ git+https://github.com/ContextNews/context-data-schemas.git@main",
    "psycopg2-binary>=2.9.11,<3.0",
    "python-dotenv>=1.2,<2.0",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ingest service dependencies
[tool.poetry.group.ingest_articles]
optional = true
[tool.poetry.group.ingest_articles.dependencies]
feedparser = ">=6.0.12,<7.0"
requests = ">=2.32,<3.0"
python-dateutil = ">=2.9,<3.0"
trafilatura = ">=2.0,<3.0"
readability-lxml = ">=0.8,<1.0"

# Compute embeddings service dependencies
[tool.poetry.group.compute_embeddings]
optional = true
[tool.poetry.group.compute_embeddings.dependencies]
sentence-transformers = ">=2.2"
numpy = ">=1.26"

# Extract entities service dependencies
[tool.poetry.group.extract_entities]
optional = true
[tool.poetry.group.extract_entities.dependencies]
spacy = ">=3.7"
spacy-transformers = ">=1.3"
pycountry = ">=24.6"

# Cluster articles service dependencies
[tool.poetry.group.cluster_articles]
optional = true
[tool.poetry.group.cluster_articles.dependencies]
hdbscan = ">=0.8.33"
numpy = ">=1.26"

# Generate stories service dependencies
[tool.poetry.group.generate_stories]
optional = true
[tool.poetry.group.generate_stories.dependencies]
cronkite = {git = "https://github.com/ContextNews/Cronkite.git"}
numpy = ">=1.26"
openai = ">=1.0"

# Classify articles service dependencies
[tool.poetry.group.classify_articles]
optional = true
[tool.poetry.group.classify_articles.dependencies]
transformers = ">=4.0"
torch = ">=2.0"

# Link stories service dependencies
[tool.poetry.group.link_stories]
optional = true
[tool.poetry.group.link_stories.dependencies]
cronkite = {git = "https://github.com/ContextNews/Cronkite.git"}
numpy = ">=1.26"
openai = ">=1.0"

# Development dependencies
[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = ">=9.0"
pandas = ">=2.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
    "src",
]
markers = [
    "integration: tests that call external services",
]
